// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`apply 1`] = `## Tofu Summary ✅

### first
**Resources:** 2 added, 0 changed, 0 destroyed.

| resource | action | state | time |
| --- | --- | --- | --- |
| \`dummy_thing.first\` (id=first-thing) | ✨️ | ✔ | 0s |
| \`dummy_thing.second\` (id=second-thing) | ✨️ | ✔ | 0s |

### second
**Resources:** 2 added, 0 changed, 0 destroyed.

| resource | action | state | time |
| --- | --- | --- | --- |
| \`dummy_thing.first\` (id=first-thing) | ✨️ | ✔ | 0s |
| \`dummy_thing.second\` (id=second-thing) | ✨️ | ✔ | 0s |

**Total:** 4 added, 0 changed, 0 destroyed.
`;

exports[`init 1`] = `## Tofu Summary ❓

**Raw output (unparsed):**

\`\`\`
HH:MM:SS.mmm INFO   The following units will be run, starting with dependencies and then their dependents:
.
╰── first
    ╰── second
HH:MM:SS.mmm INFO   [first] Downloading Terraform configurations from ./first into ./first/.terragrunt-cache/HASH/HASH
HH:MM:SS.mmm STDOUT [first] tofu: Initializing the backend...
HH:MM:SS.mmm STDOUT [first] tofu: Initializing provider plugins...
HH:MM:SS.mmm STDOUT [first] tofu: - Finding latest version of dummy/dummy...
HH:MM:SS.mmm STDOUT [first] tofu: - Installing dummy/dummy v1.0.0 to the shared cache directory...
HH:MM:SS.mmm STDOUT [first] tofu: - Installed dummy/dummy v1.0.0 (unauthenticated)
HH:MM:SS.mmm STDOUT [first] tofu: - Using dummy/dummy v1.0.0 from the shared cache directory
HH:MM:SS.mmm STDOUT [first] tofu: OpenTofu has created a lock file .terraform.lock.hcl to record the provider
HH:MM:SS.mmm STDOUT [first] tofu: selections it made above. Include this file in your version control repository
HH:MM:SS.mmm STDOUT [first] tofu: so that OpenTofu can guarantee to make the same selections by default when
HH:MM:SS.mmm STDOUT [first] tofu: you run "tofu init" in the future.
HH:MM:SS.mmm STDOUT [first] tofu: Warning: Incomplete lock file information for providers
HH:MM:SS.mmm STDOUT [first] tofu: Due to your customized provider installation methods, OpenTofu was forced to
HH:MM:SS.mmm STDOUT [first] tofu: calculate lock file checksums locally for the following providers:
HH:MM:SS.mmm STDOUT [first] tofu:   - dummy/dummy
HH:MM:SS.mmm STDOUT [first] tofu: The current .terraform.lock.hcl file only includes checksums for linux_amd64,
HH:MM:SS.mmm STDOUT [first] tofu: so OpenTofu running on another platform will fail to install these providers.
HH:MM:SS.mmm STDOUT [first] tofu: To calculate additional checksums for another platform, run:
HH:MM:SS.mmm STDOUT [first] tofu:   tofu providers lock -platform=linux_amd64
HH:MM:SS.mmm STDOUT [first] tofu: (where linux_amd64 is the platform to generate)
HH:MM:SS.mmm STDOUT [first] tofu: OpenTofu has been successfully initialized!
HH:MM:SS.mmm INFO   [second] Downloading Terraform configurations from ./second into ./second/.terragrunt-cache/HASH/HASH
HH:MM:SS.mmm STDOUT [second] tofu: Initializing the backend...
HH:MM:SS.mmm STDOUT [second] tofu: Initializing provider plugins...
HH:MM:SS.mmm STDOUT [second] tofu: - Finding latest version of dummy/dummy...
HH:MM:SS.mmm STDOUT [second] tofu: - Installing dummy/dummy v1.0.0 to the shared cache directory...
HH:MM:SS.mmm STDOUT [second] tofu: - Installed dummy/dummy v1.0.0 (unauthenticated)
HH:MM:SS.mmm STDOUT [second] tofu: - Using dummy/dummy v1.0.0 from the shared cache directory
HH:MM:SS.mmm STDOUT [second] tofu: OpenTofu has created a lock file .terraform.lock.hcl to record the provider
HH:MM:SS.mmm STDOUT [second] tofu: selections it made above. Include this file in your version control repository
HH:MM:SS.mmm STDOUT [second] tofu: so that OpenTofu can guarantee to make the same selections by default when
HH:MM:SS.mmm STDOUT [second] tofu: you run "tofu init" in the future.
HH:MM:SS.mmm STDOUT [second] tofu: Warning: Incomplete lock file information for providers
HH:MM:SS.mmm STDOUT [second] tofu: Due to your customized provider installation methods, OpenTofu was forced to
HH:MM:SS.mmm STDOUT [second] tofu: calculate lock file checksums locally for the following providers:
HH:MM:SS.mmm STDOUT [second] tofu:   - dummy/dummy
HH:MM:SS.mmm STDOUT [second] tofu: The current .terraform.lock.hcl file only includes checksums for linux_amd64,
HH:MM:SS.mmm STDOUT [second] tofu: so OpenTofu running on another platform will fail to install these providers.
HH:MM:SS.mmm STDOUT [second] tofu: To calculate additional checksums for another platform, run:
HH:MM:SS.mmm STDOUT [second] tofu:   tofu providers lock -platform=linux_amd64
HH:MM:SS.mmm STDOUT [second] tofu: (where linux_amd64 is the platform to generate)
HH:MM:SS.mmm STDOUT [second] tofu: OpenTofu has been successfully initialized!

❯❯ Run Summary  2 units  Nms
   ────────────────────────────
   Succeeded    2
\`\`\`
`;

exports[`plan 1`] = `## Tofu Summary ✅

### first
**No changes.**

### second
**No changes.**

`;
